added dev data loader cell

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -52,10 +52,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "af7858ca",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/arjunkasturi/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# %% Minimal setup\n",
     "# If needed (uncomment in a notebook):\n",
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d8c02ae2",
    "metadata": {},
    "outputs": [
@@ -133,8 +142,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "OK: True HTTP: 200\n",
-      "MODEL SAYS: 45\n"
+      "OK: False HTTP: -1\n",
+      "MODEL SAYS: \n"
      ]
     }
    ],
@@ -168,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0334e53e",
    "metadata": {},
    "outputs": [],
@@ -215,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ffddeb84",
    "metadata": {},
    "outputs": [
@@ -223,10 +232,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score: 2/3 correct\n",
-      "❌ math_inequality: expected='8', got='4' (HTTP 200)\n",
-      "✅ commonsense_ice: expected='stay the same', got='stay the same' (HTTP 200)\n",
-      "✅ logic_race: expected='second', got='second' (HTTP 200)\n"
+      "Score: 0/3 correct\n",
+      "❌ math_inequality: expected='8', got='' (HTTP -1)\n",
+      "   error: HTTPConnectionPool(host='10.4.58.53', port=41701): Max retries exceeded with url: /v1/chat/completions (Caused by ConnectTimeoutError(<urllib3.connection.HTTPConnection object at 0x109d21f10>, 'Connection to 10.4.58.53 timed out. (connect timeout=60)'))\n",
+      "❌ commonsense_ice: expected='stay the same', got='' (HTTP -1)\n",
+      "   error: HTTPConnectionPool(host='10.4.58.53', port=41701): Max retries exceeded with url: /v1/chat/completions (Caused by ConnectTimeoutError(<urllib3.connection.HTTPConnection object at 0x109d245e0>, 'Connection to 10.4.58.53 timed out. (connect timeout=60)'))\n",
+      "❌ logic_race: expected='second', got='' (HTTP -1)\n",
+      "   error: HTTPConnectionPool(host='10.4.58.53', port=41701): Max retries exceeded with url: /v1/chat/completions (Caused by ConnectTimeoutError(<urllib3.connection.HTTPConnection object at 0x109d24f40>, 'Connection to 10.4.58.53 timed out. (connect timeout=60)'))\n"
      ]
     }
    ],
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "e7bfad26",
    "metadata": {},
    "outputs": [
@@ -361,9 +373,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "❌ math_inequality: expected='8', got='4' (HTTP 200)\n",
-      "✅ commonsense_ice: expected='stay the same', got='stay the same' (HTTP 200)\n",
-      "✅ logic_race: expected='second', got='second' (HTTP 200)\n"
+      "❌ math_inequality: expected='8', got='' (HTTP -1)\n",
+      "   error: HTTPConnectionPool(host='10.4.58.53', port=41701): Max retries exceeded with url: /v1/chat/completions (Caused by ConnectTimeoutError(<urllib3.connection.HTTPConnection object at 0x109a20700>, 'Connection to 10.4.58.53 timed out. (connect timeout=60)'))\n"
      ]
     }
    ],
@@ -431,6 +442,33 @@
     "# Example:\n",
     "results_llm_judge = self_evaluate_tests(tests, verbose=True, model=MODEL, grader_model=MODEL)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "948d8800",
+   "metadata": {},
+   "source": [
+    "## My Agent Implementation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55ee70f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load development data from json\n",
+    "import json\n",
+    "\n",
+    "with open (\"cse476_final_project_dev_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    dev_data = json.load(f)\n",
+    "\n",
+    "print(\"Number of dev examples:\" , len(dev_data))\n",
+    "print(\"First dev item:\")\n",
+    "print(dev_data[0])\n"
+   ]
   }
  ],
  "metadata": {
@@ -449,7 +487,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
