add helper to extract final answer from CoT

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -553,6 +553,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e19475a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final answer extrtactor\n",
+    "\n",
+    "def get_final_answer(text:str)->str:\n",
+    "    \"\"\" Get short final answer from long chain-of-thought string. \n",
+    "    Look for 'FINAL ANSWER' else use last non empty line\"\"\"\n",
+    "\n",
+    "    if not text:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    match = re.search(r\"FINAL ANSWER[:\\-]s*(.+)\", text, flags=re.IGNORECASE)\n",
+    "    if match:\n",
+    "        return match.group(1).strip()\n",
+    "    \n",
+    "    lines = [ln.strip() for ln in text.splitlines() if ln.strip()]\n",
+    "    if not lines:\n",
+    "        return \"\"\n",
+    "    return lines[-1]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "56c5d1d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_final_answer(\"some steps\\nFINAL ANSWER: 42\"))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "37e42de7",
    "metadata": {},
