--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -568,7 +568,7 @@
     "    if not text:\n",
     "        return \"\"\n",
     "    \n",
-    "    match = re.search(r\"FINAL ANSWER[:\\-]s*(.+)\", text, flags=re.IGNORECASE)\n",
+    "    match = re.search(r\"FINAL ANSWER[:\\-]\\s*(.+)\", text, flags=re.IGNORECASE)\n",
     "    if match:\n",
     "        return match.group(1).strip()\n",
     "    \n",
