self consistency + test cell

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -513,7 +513,7 @@
    "id": "34ad6d39",
    "metadata": {},
    "source": [
-    "#chain of thought"
+    "Inference Techniques #1 chain of thought"
    ]
   },
   {
@@ -598,6 +598,83 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "eb7e82c1",
+   "metadata": {},
+   "source": [
+    "Inference Techniques #2 : Self consistency "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8c4c71dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# self consistency\n",
+    "\n",
+    "def self_con( question_text: str, \n",
+    "              sample_count: int = 5,\n",
+    "              temp: float = 0.7,\n",
+    "              pause: float = 0.2):\n",
+    "    \n",
+    "    \"\"\"self-consistency: run CoT multiple times and pick the most common final answer.\n",
+    "    Return (best_answer, all_answers, all_raw_texts). \"\"\"\n",
+    "\n",
+    "    answers = []\n",
+    "    raw_texts = []\n",
+    "\n",
+    "    for _ in range(sample_count):\n",
+    "        raw, _ = chain_of_thought(question_text, temp=temp)\n",
+    "        final = get_final_answer(raw)\n",
+    "        answers.append(final)\n",
+    "        raw_texts.append(raw)\n",
+    "\n",
+    "        if pause:\n",
+    "            time.sleep(pause)\n",
+    "            \n",
+    "    non_empty = [ a for a in answers if a ]\n",
+    "    if non_empty:\n",
+    "        counts = Counter(non_empty)\n",
+    "        best = counts.most_common(1)[0][0]\n",
+    "    else:\n",
+    "        best = \"\"\n",
+    "\n",
+    "    return best, answers, raw_texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "00f48762",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'best' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# test\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m best, all_ans, all_raw \u001b[39m=\u001b[39m self_con(\u001b[39m\"\u001b[39;49m\u001b[39mwhat is 13+29? just give number\u001b[39;49m\u001b[39m\"\u001b[39;49m, sample_count\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBest:\u001b[39m\u001b[39m\"\u001b[39m , best)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAll:\u001b[39m\u001b[39m\"\u001b[39m, all_ans)\n",
+      "Cell \u001b[0;32mIn[28], line 28\u001b[0m, in \u001b[0;36mself_con\u001b[0;34m(question_text, sample_count, temp, pause)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mif\u001b[39;00m non_empty:\n\u001b[1;32m     27\u001b[0m     counts \u001b[39m=\u001b[39m Counter(non_empty)\n\u001b[0;32m---> 28\u001b[0m     best \u001b[39m-\u001b[39m counts\u001b[39m.\u001b[39mmost_common(\u001b[39m1\u001b[39m)[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m]\n\u001b[1;32m     29\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     best \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'best' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "# test\n",
+    "best, all_ans, all_raw = self_con(\"what is 13+29? just give number\", sample_count=3)\n",
+    "print(\"Best:\" , best)\n",
+    "print(\"All:\", all_ans)\n"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37e42de7",
    "metadata": {},
