--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -608,7 +608,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "4222b66e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "8c4c71dc",
    "metadata": {},
    "outputs": [],
@@ -649,20 +657,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "00f48762",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'best' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[35], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# test\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m best, all_ans, all_raw \u001b[39m=\u001b[39m self_con(\u001b[39m\"\u001b[39;49m\u001b[39mwhat is 13+29? just give number\u001b[39;49m\u001b[39m\"\u001b[39;49m, sample_count\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mBest:\u001b[39m\u001b[39m\"\u001b[39m , best)\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mAll:\u001b[39m\u001b[39m\"\u001b[39m, all_ans)\n",
-      "Cell \u001b[0;32mIn[28], line 28\u001b[0m, in \u001b[0;36mself_con\u001b[0;34m(question_text, sample_count, temp, pause)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[39mif\u001b[39;00m non_empty:\n\u001b[1;32m     27\u001b[0m     counts \u001b[39m=\u001b[39m Counter(non_empty)\n\u001b[0;32m---> 28\u001b[0m     best \u001b[39m-\u001b[39m counts\u001b[39m.\u001b[39mmost_common(\u001b[39m1\u001b[39m)[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m]\n\u001b[1;32m     29\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     best \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'best' referenced before assignment"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 13 + 29 = 42\n",
+      "All: ['13 + 29 = 42', '13 + 29 = 42', '13 + 29 = 42']\n"
      ]
     }
    ],
