added reflection/ self correction +  tester

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -608,15 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4222b66e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "8c4c71dc",
    "metadata": {},
    "outputs": [],
@@ -657,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "00f48762",
    "metadata": {},
    "outputs": [
@@ -680,9 +672,102 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "37e42de7",
+   "id": "9136e74d",
    "metadata": {},
-   "source": []
+   "source": [
+    "Inference technique #3: Reflection/self_correction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3415be1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Inference technique #3: Reflection/self_correction\n",
+    "def refl(question_text: str,\n",
+    "         candidate_answer: str,\n",
+    "         temp: float =0.0):\n",
+    "    \"\"\" Reflection: you are a strick grader. \n",
+    "    If the answer is deamed wrong, solve again and return the fixed answer.\"\"\"\n",
+    "\n",
+    "    #1) T or F\n",
+    "    judge_system = (\n",
+    "        \"you are a strick grader. \"\n",
+    "        \"reply with True or False, no explanation\"\n",
+    "    )\n",
+    "\n",
+    "    judge_prompt =  f\"\"\" You are grading the question answer pair.\n",
+    "    Return what is True if CANDIDATE_ANSWER is acceptable else return False.\n",
+    "\n",
+    "    QUESTION:\n",
+    "    {question_text}\n",
+    "\n",
+    "    PREVIOUS_ANSWER:\n",
+    "    {candidate_answer}\n",
+    "\n",
+    "    Answer only True or False. \"\"\"\n",
+    "\n",
+    "    judge_res = call_model_chat_completions(\n",
+    "        prompt=judge_prompt,\n",
+    "        system= judge_system,\n",
+    "        model=MODEL,\n",
+    "        temperature=temp,\n",
+    "    )\n",
+    "\n",
+    "    judge_reply = (judge_res.get(\"text\") or \"\").strip().lower()\n",
+    "\n",
+    "    if judge_reply.startswith(\"true\"):\n",
+    "        return candidate_answer\n",
+    "    \n",
+    "    # if wrong ask for a corrcted answer\n",
+    "    fix_system = (\n",
+    "        \"You are a probelm solver who is careful.\"\n",
+    "        \"Think step by step and give the final answer on the last line\"\n",
+    "        \"starting with 'FINAL ANSWER:'.\"\n",
+    "    )\n",
+    "\n",
+    "    fix_prompt = f\"\"\"The previous answer was judged inccorect.\n",
+    "\n",
+    "    QUESTION:\n",
+    "    {question_text}\n",
+    "\n",
+    "    PREVIOUS_ANSWER:\n",
+    "    {candidate_answer}\n",
+    "    \n",
+    "    solve the question correctly, think step by step and end with: FINAL_ANSWER: <correct_answer>\n",
+    "    \"\"\"\n",
+    "\n",
+    "    fix_raw, _ = chain_of_thought(fix_prompt, system_message=fix_system, temp=0.3)\n",
+    "    fixed = get_final_answer(fix_raw)\n",
+    "    return fixed or candidate_answer\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e898cc73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self_con best: 5 + 7 = 12\n",
+      "after reflection: 5 + 7 = 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "q = \"what is 5 + 7? Just give the number.\"\n",
+    "best, all_ans, all_raw = self_con(q, sample_count=3)\n",
+    "print(\"self_con best:\", best)\n",
+    "final =refl(q, best)\n",
+    "print(\"after reflection:\", final)"
+   ]
   }
  ],
  "metadata": {
