--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "44afbef3",
    "metadata": {},
@@ -47,24 +48,15 @@
     "- **Deadline for submitting all deliverables**: 12/05/2025\n",
     "\n",
     "### Extra Credit. \n",
-    "The top 20 projects (ranked by performance metrics on the test data and at the TA's discretion of implementation quality) will be given extra credits. The actual credits will be between 1% to 7.5% depending on the ranking."
+    "The top 20 projects (ranked by performance metrics on the test data and at the TA's discretion of implementation quality) will be given extra credits. The actual credits will be between 1% to 7.5% depending on the ranking. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "id": "af7858ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/arjunkasturi/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% Minimal setup\n",
     "# If needed (uncomment in a notebook):\n",
@@ -134,19 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d8c02ae2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK: True HTTP: 200\n",
-      "MODEL SAYS: 45\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% Direct call example\n",
     "demo_prompt = \"What is 17 + 28? Answer with just the number.\"\n",
@@ -177,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "0334e53e",
    "metadata": {},
    "outputs": [],
@@ -224,21 +207,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "ffddeb84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Score: 2/3 correct\n",
-      "❌ math_inequality: expected='8', got='4' (HTTP 200)\n",
-      "✅ commonsense_ice: expected='stay the same', got='stay the same' (HTTP 200)\n",
-      "✅ logic_race: expected='second', got='second' (HTTP 200)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %% Simple normalization and evaluation helpers\n",
     "def normalize_text(s: str) -> str:\n",
@@ -311,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6559aa3f",
    "metadata": {},
    "outputs": [],
@@ -362,20 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "e7bfad26",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "❌ math_inequality: expected='8', got='4' (HTTP 200)\n",
-      "✅ commonsense_ice: expected='stay the same', got='stay the same' (HTTP 200)\n",
-      "✅ logic_race: expected='second', got='second' (HTTP 200)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def self_evaluate_tests(tests, model=MODEL, grader_model=None, sleep_sec=0.2, verbose=True):\n",
     "    \"\"\"\n",
@@ -452,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 111,
    "id": "55ee70f2",
    "metadata": {},
    "outputs": [
@@ -479,6 +441,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "2fcacf11",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test questions: 6208\n",
+      "Template rows: 6208\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load test data + answer template\n",
+    "with open(\"cse_476_final_project_test_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    test_data = json.load(f)\n",
+    "\n",
+    "with open(\"cse_476_final_project_answers.json\", \"r\" , encoding=\"utf-8\") as f:\n",
+    "    test_answers = json.load(f)\n",
+    "\n",
+    "print(\"Test questions:\", len(test_data))\n",
+    "print(\"Template rows:\", len(test_answers))"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "34ad6d39",
@@ -489,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 113,
    "id": "637ab0a2",
    "metadata": {},
    "outputs": [],
@@ -506,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 114,
    "id": "261f3a28",
    "metadata": {},
    "outputs": [
@@ -525,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 115,
    "id": "e19475a4",
    "metadata": {},
    "outputs": [],
@@ -558,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 116,
    "id": "56c5d1d5",
    "metadata": {},
    "outputs": [
@@ -585,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 118,
    "id": "8c4c71dc",
    "metadata": {},
    "outputs": [],
@@ -597,7 +586,7 @@
     "def self_con( question_text: str, \n",
     "              sample_count: int = 5,\n",
     "              temp: float = 0.7,\n",
-    "              pause: float = 0.2):\n",
+    "              ):\n",
     "    \n",
     "    \"\"\"self-consistency: run CoT multiple times and pick the most common final answer.\n",
     "    Return (best_answer, all_answers, all_raw_texts). \"\"\"\n",
@@ -610,9 +599,6 @@
     "        final = get_final_answer(raw)\n",
     "        answers.append(final)\n",
     "        raw_texts.append(raw)\n",
-    "\n",
-    "        if pause:\n",
-    "            time.sleep(pause)\n",
     "            \n",
     "    non_empty = [ a for a in answers if a ]\n",
     "    if non_empty:\n",
@@ -626,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 119,
    "id": "00f48762",
    "metadata": {},
    "outputs": [
@@ -634,8 +620,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best: 13 + 29 = 42\n",
-      "All: ['13 + 29 = 42', '13 + 29 = 42', '13 + 29 = 42']\n"
+      "Best: 42\n",
+      "All: ['42', '42', '42']\n"
      ]
     }
    ],
@@ -657,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 120,
    "id": "3415be1b",
    "metadata": {},
    "outputs": [],
@@ -724,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 121,
    "id": "e898cc73",
    "metadata": {},
    "outputs": [
@@ -732,8 +718,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "self_con best: 5 + 7 = 12\n",
-      "after reflection: 5 + 7 = 12\n"
+      "self_con best: 12\n",
+      "after reflection: 12\n"
      ]
     }
    ],
@@ -757,14 +743,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 122,
    "id": "97999fec",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Agent which combines all 3 techniques\n",
     "\n",
-    "def agent_solve( example:dict, sc_samples: int = 5) -> str:\n",
+    "def agent_solve( example:dict, sc_samples: int = 2, use_reflection:bool = True) -> str:\n",
     "    \"\"\" run full agen on example.\n",
     "    1) self_con for CoT + self-consistency\n",
     "    2) refl for reflection/ self correction\n",
@@ -779,17 +765,20 @@
     "    )\n",
     "\n",
     "    #reflection/self-correction\n",
-    "    final = refl(\n",
-    "        question_text=question,\n",
-    "        candidate_answer= best,\n",
-    "    )\n",
+    "    if use_reflection:\n",
+    "        final = refl(\n",
+    "            question_text=question,\n",
+    "            candidate_answer= best,\n",
+    "        )\n",
+    "    else:\n",
+    "        final = best\n",
     "\n",
     "    return str(final).strip()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 123,
    "id": "0b5f006f",
    "metadata": {},
    "outputs": [
@@ -801,17 +790,17 @@
       "Example 0\n",
       "INPUT Let $ABCD$ be a convex quadrilateral with $AB = CD = 10$ , $BC = 14$ , and $AD = 2\\sqrt{65}$ . Assume that the diagonals of $ABCD$ intersect at point $P$ , and that the sum of the areas of triangles $APB$ and $CPD$ equals the sum of the areas of triangles $BPC$ and $APD$ . Find the area of quadrilateral $ABCD$ .\n",
       "GOLD 112\n",
-      "AGENT This implies\n",
+      "AGENT 65\n",
       "\n",
       "Example 1\n",
       "INPUT A tennis player computes her win ratio by dividing the number of matches she has won by the total number of matches she has played. At the start of a weekend, her win ratio is exactly $0.500$ . During the weekend, she plays four matches, winning three and losing one. At the end of the weekend, her win ratio is greater than $.503$ . What's the largest number of matches she could've won before the weekend began?\n",
       "GOLD 164\n",
-      "AGENT - $ w $ = number of matches she won **before** the weekend\n",
+      "AGENT 1\n",
       "\n",
       "Example 2\n",
       "INPUT What is the product of the real roots of the equation $x^2 + 18x + 30 = 2 \\sqrt{x^2 + 18x + 45}$ ?\n",
       "GOLD 20\n",
-      "AGENT x^2 + 18x + 45 = (x^2 + 18x\n"
+      "AGENT 2\n"
      ]
     }
    ],
@@ -823,6 +812,201 @@
     "    print(\"INPUT\", ex[\"input\"])\n",
     "    print(\"GOLD\", ex[\"output\"])\n",
     "    print(\"AGENT\", agent_solve(ex, sc_samples=3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "7e123f75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#code for one chunk\n",
+    "import json\n",
+    "\n",
+    "def run_chunk_range(start_idx: int,\n",
+    "                    end_idx: int,\n",
+    "                    sc_samples: int = 2,\n",
+    "                    use_reflection: bool = False,\n",
+    "                    chunk_id: int =0):\n",
+    "    \"\"\" Run agent_solve on test_data[start_idx: end_idx] and save results\n",
+    "    to chunk_{chunk_id}.json as a list of { \"index\": im \"output\":\"...\"}.\"\"\"\n",
+    "\n",
+    "    #laod test data fresh inside the function\n",
+    "    with open(\"cse_476_final_project_test_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "        test_data=json.load(f)\n",
+    "\n",
+    "    n = len(test_data)\n",
+    "    start_idx = max(0, start_idx)\n",
+    "    end_idx = min(end_idx, n)\n",
+    "\n",
+    "    print(f\"[chunk {chunk_id}] Running indicies {start_idx}..{end_idx-1} (total {end_idx - start_idx})\")\n",
+    "    rows = []\n",
+    "    for i in range( start_idx, end_idx):\n",
+    "        ex = test_data[i]\n",
+    "        ans= agent_solve(ex, sc_samples = sc_samples, use_reflection=use_reflection)\n",
+    "        out_str = str(ans).strip()\n",
+    "\n",
+    "        rows.append({\n",
+    "            \"index\": i,\n",
+    "            \"output\": out_str\n",
+    "        })\n",
+    "\n",
+    "        # progress log inside this chunk\n",
+    "        if (i - start_idx) % 50 ==0:\n",
+    "            print(f\"[chunk {chunk_id} Done global index {i}]\")\n",
+    "\n",
+    "    fname = f\"chunk_{chunk_id}.json\"\n",
+    "    with open(fname, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(rows, f, indent=2)\n",
+    "\n",
+    "    print(f\"[chunk {chunk_id}] wrote {len(rows)} rows to {fname}\")\n",
+    "    return fname\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "08baf8e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total test questions: 6208\n",
+      " chunk size: 776\n",
+      "jobs (start_idx, end_idx, chunk_id):\n",
+      "  (0, 776, 0)\n",
+      "  (776, 1552, 1)\n",
+      "  (1552, 2328, 2)\n",
+      "  (2328, 3104, 3)\n",
+      "  (3104, 3880, 4)\n",
+      "  (3880, 4656, 5)\n",
+      "  (4656, 5432, 6)\n",
+      "  (5432, 6208, 7)\n",
+      "running max workers = 4\n",
+      "[chunk 1] Running indicies 776..1551 (total 776)\n",
+      "[chunk 0] Running indicies 0..775 (total 776)\n",
+      "[chunk 3] Running indicies 2328..3103 (total 776)\n",
+      "[chunk 2] Running indicies 1552..2327 (total 776)\n",
+      "[chunk 0 Done global index 0]\n",
+      "[chunk 1 Done global index 776]\n",
+      "[chunk 2 Done global index 1552]\n",
+      "[chunk 3 Done global index 2328]\n",
+      "[chunk 0 Done global index 50]\n",
+      "[chunk 1 Done global index 826][chunk 2 Done global index 1602]\n",
+      "\n",
+      "[chunk 3 Done global index 2378]\n",
+      "[chunk 0 Done global index 100]\n",
+      "[chunk 1 Done global index 876]\n",
+      "[chunk 2 Done global index 1652]\n",
+      "[chunk 3 Done global index 2428]\n",
+      "[chunk 2 Done global index 1702][chunk 0 Done global index 150]\n",
+      "[chunk 1 Done global index 926]\n",
+      "\n",
+      "[chunk 3 Done global index 2478]\n",
+      "[chunk 1 Done global index 976]\n",
+      "[chunk 0 Done global index 200]\n",
+      "[chunk 2 Done global index 1752]\n",
+      "[chunk 3 Done global index 2528]\n",
+      "[chunk 1 Done global index 1026]\n",
+      "[chunk 0 Done global index 250]\n",
+      "[chunk 2 Done global index 1802]\n",
+      "[chunk 3 Done global index 2578]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# code for 8 chunks\n",
+    "\n",
+    "import math\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
+    "import json \n",
+    "\n",
+    " # laod test data fresh inside the function\n",
+    "with open(\"cse_476_final_project_test_data.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "        test_data = json.load(f)\n",
+    "\n",
+    "N = len(test_data)\n",
+    "print(\"total test questions:\" , N)\n",
+    "\n",
+    "# 8 chunks\n",
+    "num_chunks =8\n",
+    "chunk_size = math.ceil(N/num_chunks)\n",
+    "print(\" chunk size:\", chunk_size)\n",
+    "\n",
+    "# jobs\n",
+    "jobs = []\n",
+    "for chunk_id in range(num_chunks):\n",
+    "        start_idx = chunk_id *chunk_size\n",
+    "        end_idx = min((chunk_id+1)*chunk_size, N)\n",
+    "        if start_idx >= N:\n",
+    "                break\n",
+    "        jobs.append((start_idx, end_idx, chunk_id))\n",
+    "\n",
+    "print(\"jobs (start_idx, end_idx, chunk_id):\")\n",
+    "for j in jobs:\n",
+    "        print(\" \", j)\n",
+    "\n",
+    "def job_wrapper(args):\n",
+    "        start_idx, end_idx, chunk_id =args\n",
+    "        return run_chunk_range(\n",
+    "                start_idx= start_idx,\n",
+    "                end_idx= end_idx,\n",
+    "                sc_samples= 2,\n",
+    "                use_reflection=False,\n",
+    "                chunk_id= chunk_id,\n",
+    "        )\n",
+    "max_workers = min(4, len(jobs))\n",
+    "print(f\"running max workers = {max_workers}\")\n",
+    "\n",
+    "with ThreadPoolExecutor(max_workers=max_workers) as pool:\n",
+    "        results = list(pool.map(job_wrapper, jobs))\n",
+    "\n",
+    "print(\"ALL chunks finished, Files:\", results)\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3498872b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "i =766\n",
+    "ex = test_data[i]\n",
+    "print(\"INDEX:\",i)\n",
+    "print(\"DOMAIN:\", ex.get(\"domain\"))\n",
+    "print(\"INPUT:\", ex.get(\"input\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3379ba9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#run agent on all test questoins and fill outputs\n",
+    "for i, (ex, row) in enumerate(zip(test_data, test_answers)):\n",
+    "    q = ex.get(\"input\", \"\")\n",
+    "    ans = agent_solve(ex,sc_samples=3, use_reflection = False)\n",
+    "    row[\"output\"] = str(ans).strip()\n",
+    "                        \n",
+    "    if i % 10 ==0:\n",
+    "        print(f\"Done {i} question...\")\n",
+    "\n",
+    "# save final result file\n",
+    "out_path = \"my_final_project_results.json\"\n",
+    "with open(out_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(test_answers, f, indent=2)\n",
+    "\n",
+    "print(\"Wrote results to\", out_path)"
    ]
   }
  ],
