added qs sepereated by 8 chunks, removed some unwanted blocks

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -913,7 +913,124 @@
       "[chunk 1 Done global index 1026]\n",
       "[chunk 0 Done global index 250]\n",
       "[chunk 2 Done global index 1802]\n",
-      "[chunk 3 Done global index 2578]\n"
+      "[chunk 3 Done global index 2578]\n",
+      "[chunk 1 Done global index 1076]\n",
+      "[chunk 0 Done global index 300]\n",
+      "[chunk 2 Done global index 1852]\n",
+      "[chunk 3 Done global index 2628]\n",
+      "[chunk 1 Done global index 1126]\n",
+      "[chunk 0 Done global index 350]\n",
+      "[chunk 2 Done global index 1902]\n",
+      "[chunk 3 Done global index 2678]\n",
+      "[chunk 1 Done global index 1176]\n",
+      "[chunk 0 Done global index 400]\n",
+      "[chunk 2 Done global index 1952]\n",
+      "[chunk 3 Done global index 2728]\n",
+      "[chunk 1 Done global index 1226]\n",
+      "[chunk 0 Done global index 450]\n",
+      "[chunk 2 Done global index 2002]\n",
+      "[chunk 3 Done global index 2778]\n",
+      "[chunk 1 Done global index 1276]\n",
+      "[chunk 0 Done global index 500]\n",
+      "[chunk 2 Done global index 2052]\n",
+      "[chunk 3 Done global index 2828]\n",
+      "[chunk 1 Done global index 1326]\n",
+      "[chunk 0 Done global index 550]\n",
+      "[chunk 2 Done global index 2102]\n",
+      "[chunk 3 Done global index 2878]\n",
+      "[chunk 1 Done global index 1376]\n",
+      "[chunk 0 Done global index 600]\n",
+      "[chunk 2 Done global index 2152]\n",
+      "[chunk 3 Done global index 2928]\n",
+      "[chunk 1 Done global index 1426]\n",
+      "[chunk 0 Done global index 650]\n",
+      "[chunk 2 Done global index 2202]\n",
+      "[chunk 3 Done global index 2978]\n",
+      "[chunk 1 Done global index 1476]\n",
+      "[chunk 0 Done global index 700]\n",
+      "[chunk 2 Done global index 2252]\n",
+      "[chunk 3 Done global index 3028]\n",
+      "[chunk 1 Done global index 1526]\n",
+      "[chunk 0 Done global index 750]\n",
+      "[chunk 2 Done global index 2302]\n",
+      "[chunk 3 Done global index 3078]\n",
+      "[chunk 1] wrote 776 rows to chunk_1.json\n",
+      "[chunk 4] Running indicies 3104..3879 (total 776)\n",
+      "[chunk 4 Done global index 3104]\n",
+      "[chunk 0] wrote 776 rows to chunk_0.json\n",
+      "[chunk 5] Running indicies 3880..4655 (total 776)\n",
+      "[chunk 5 Done global index 3880]\n",
+      "[chunk 2] wrote 776 rows to chunk_2.json\n",
+      "[chunk 6] Running indicies 4656..5431 (total 776)\n",
+      "[chunk 6 Done global index 4656]\n",
+      "[chunk 3] wrote 776 rows to chunk_3.json\n",
+      "[chunk 7] Running indicies 5432..6207 (total 776)\n",
+      "[chunk 7 Done global index 5432]\n",
+      "[chunk 4 Done global index 3154]\n",
+      "[chunk 5 Done global index 3930]\n",
+      "[chunk 6 Done global index 4706]\n",
+      "[chunk 7 Done global index 5482]\n",
+      "[chunk 4 Done global index 3204]\n",
+      "[chunk 5 Done global index 3980]\n",
+      "[chunk 6 Done global index 4756]\n",
+      "[chunk 7 Done global index 5532]\n",
+      "[chunk 4 Done global index 3254]\n",
+      "[chunk 5 Done global index 4030]\n",
+      "[chunk 6 Done global index 4806]\n",
+      "[chunk 7 Done global index 5582]\n",
+      "[chunk 4 Done global index 3304]\n",
+      "[chunk 5 Done global index 4080]\n",
+      "[chunk 6 Done global index 4856]\n",
+      "[chunk 7 Done global index 5632]\n",
+      "[chunk 4 Done global index 3354]\n",
+      "[chunk 5 Done global index 4130]\n",
+      "[chunk 6 Done global index 4906]\n",
+      "[chunk 7 Done global index 5682]\n",
+      "[chunk 4 Done global index 3404]\n",
+      "[chunk 5 Done global index 4180]\n",
+      "[chunk 6 Done global index 4956]\n",
+      "[chunk 7 Done global index 5732]\n",
+      "[chunk 4 Done global index 3454]\n",
+      "[chunk 5 Done global index 4230]\n",
+      "[chunk 6 Done global index 5006]\n",
+      "[chunk 7 Done global index 5782]\n",
+      "[chunk 4 Done global index 3504]\n",
+      "[chunk 5 Done global index 4280]\n",
+      "[chunk 6 Done global index 5056]\n",
+      "[chunk 7 Done global index 5832]\n",
+      "[chunk 4 Done global index 3554]\n",
+      "[chunk 5 Done global index 4330]\n",
+      "[chunk 6 Done global index 5106]\n",
+      "[chunk 7 Done global index 5882]\n",
+      "[chunk 4 Done global index 3604]\n",
+      "[chunk 5 Done global index 4380]\n",
+      "[chunk 6 Done global index 5156]\n",
+      "[chunk 7 Done global index 5932]\n",
+      "[chunk 4 Done global index 3654]\n",
+      "[chunk 5 Done global index 4430]\n",
+      "[chunk 6 Done global index 5206]\n",
+      "[chunk 7 Done global index 5982]\n",
+      "[chunk 4 Done global index 3704]\n",
+      "[chunk 5 Done global index 4480]\n",
+      "[chunk 6 Done global index 5256]\n",
+      "[chunk 7 Done global index 6032]\n",
+      "[chunk 4 Done global index 3754]\n",
+      "[chunk 5 Done global index 4530]\n",
+      "[chunk 6 Done global index 5306]\n",
+      "[chunk 7 Done global index 6082]\n",
+      "[chunk 4 Done global index 3804]\n",
+      "[chunk 5 Done global index 4580]\n",
+      "[chunk 6 Done global index 5356]\n",
+      "[chunk 7 Done global index 6132]\n",
+      "[chunk 4 Done global index 3854]\n",
+      "[chunk 5 Done global index 4630]\n",
+      "[chunk 6 Done global index 5406]\n",
+      "[chunk 7 Done global index 6182]\n",
+      "[chunk 4] wrote 776 rows to chunk_4.json\n",
+      "[chunk 5] wrote 776 rows to chunk_5.json\n",
+      "[chunk 6] wrote 776 rows to chunk_6.json\n",
+      "[chunk 7] wrote 776 rows to chunk_7.json\n",
+      "ALL chunks finished, Files: ['chunk_0.json', 'chunk_1.json', 'chunk_2.json', 'chunk_3.json', 'chunk_4.json', 'chunk_5.json', 'chunk_6.json', 'chunk_7.json']\n"
      ]
     }
    ],
@@ -967,22 +1084,6 @@
     "print(\"ALL chunks finished, Files:\", results)\n",
     "        \n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3498872b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "i =766\n",
-    "ex = test_data[i]\n",
-    "print(\"INDEX:\",i)\n",
-    "print(\"DOMAIN:\", ex.get(\"domain\"))\n",
-    "print(\"INPUT:\", ex.get(\"input\"))\n"
    ]
   },
   {
