Add merged final results JSON for test set

--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -1089,6 +1089,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7413660c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#merge the 8 chunks\n",
+    "import json\n",
+    "import glob\n",
+    "\n",
+    "# load orginal answer temp\n",
+    "with open(\"cse_476_final_project_answers.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    full_answers = json.load(f)\n",
+    "\n",
+    "print(\"Full answer length before merge:\" , len(full_answers))\n",
+    "\n",
+    "# find all chunk files\n",
+    "chunk_files = sorted(glob.glob(\"chunk_*.json\"))\n",
+    "print(\"Found chunk files:\", chunk_files)\n",
+    "\n",
+    "# inject each chunks ouput into the correct position\n",
+    "for fname in chunk_files:\n",
+    "    with open(fname, \"r\", encoding=\"utf-8\") as f:\n",
+    "        chunk_data = json.load(f)\n",
+    "\n",
+    "    print(\"Merging\", fname, \"with\", len(chunk_data),\"rows\")\n",
+    "\n",
+    "    for row in chunk_data:\n",
+    "        idx = row[\"index\"]\n",
+    "        out_str = str(row[\"output\"]).strip()\n",
+    "        full_answers[idx][\"output\"] = out_str\n",
+    "\n",
+    "# check missing/ empty output\n",
+    "missing =[ \n",
+    "    i for i, row in enumerate(full_answers)\n",
+    "    if(\"output\" not in row) or (not str(row[\"output\"]).strip())\n",
+    "]\n",
+    "\n",
+    "print(\"Number of rows with missing/empty output:\", len(missing))\n",
+    "\n",
+    "# save final mergen json\n",
+    "out_path = \"final_project_result.json\"\n",
+    "with open(out_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump(full_answers, f, indent=2)\n",
+    "\n",
+    "print(\"wrote final merged results to\", out_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5725f16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if files have merged correct\n",
+    "with open(\"final_project_result.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "print(\"Rows:\", len(data))\n",
+    "print(\"First row:\", data[0])\n",
+    "print(\"Last row:\", data[-1])\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3379ba9a",
    "metadata": {},
    "outputs": [],
