--- a/final_project_tutorial.ipynb
+++ b/final_project_tutorial.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 111,
    "id": "af7858ca",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "id": "d8c02ae2",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 113,
    "id": "0334e53e",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 114,
    "id": "ffddeb84",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 115,
    "id": "6559aa3f",
    "metadata": {},
    "outputs": [],
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 116,
    "id": "e7bfad26",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 117,
    "id": "55ee70f2",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 118,
    "id": "2fcacf11",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 119,
    "id": "637ab0a2",
    "metadata": {},
    "outputs": [],
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 120,
    "id": "261f3a28",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 121,
    "id": "e19475a4",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 122,
    "id": "56c5d1d5",
    "metadata": {},
    "outputs": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 123,
    "id": "8c4c71dc",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 124,
    "id": "00f48762",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 125,
    "id": "3415be1b",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "id": "e898cc73",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "97999fec",
    "metadata": {},
    "outputs": [],
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "649e0358",
    "metadata": {},
    "outputs": [],
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "0b5f006f",
    "metadata": {},
    "outputs": [
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "dd4aece8",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "2f080f2e",
    "metadata": {},
    "outputs": [],
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "id": "cb7f2d8b",
    "metadata": {},
    "outputs": [
@@ -1431,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 127,
    "id": "f5725f16",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1447,7 @@
    ],
    "source": [
     "# check if files have merged correct\n",
-    "with open(\"final_project_result2.json\", \"r\", encoding=\"utf-8\") as f:\n",
+    "with open(\"final_project_result.json\", \"r\", encoding=\"utf-8\") as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "print(\"Rows:\", len(data))\n",
